--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "rules": {
       "react/jsx-filename-extension": 0,
       "react/jsx-one-expression-per-line": 0,
-      "arrow-body-style": 0
+      "arrow-body-style": 0,
+      "object-shorthand": 0,
+      "import/prefer-default-export": 0
     }
   },
   "browserslist": {
