--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
       "react/jsx-one-expression-per-line": 0,
       "arrow-body-style": 0,
       "object-shorthand": 0,
-      "import/prefer-default-export": 0
+      "import/prefer-default-export": 0,
+      "react/prop-types": 0
     }
   },
   "browserslist": {
