--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
       "arrow-body-style": 0,
       "object-shorthand": 0,
       "import/prefer-default-export": 0,
-      "react/prop-types": 0
+      "react/prop-types": 0,
+      "no-shadow": 0
     }
   },
   "browserslist": {
