--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
     "react-redux": "^7.1.3",
-    "react-scripts": "3.3.1",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "styled-components": "^5.0.1"
   },
